# cc-tools

./: .gitignore  README.md  SPEC.md  pyproject.toml
plans/: clang-tidy-wrap-final-summary.md  clang-tidy-wrap-implementation-plan.md  quest-cursor.md
src/ctwrap/: __main__.py  cli.py  doctor.py  errors.py  fallback.py  kernel.py  scan.py  tools.py
src/ctwrap/compilation/: __init__.py  database.py
src/ctwrap/config/: __init__.py  loader.py  schema.py
src/ctwrap/report/: __init__.py  model.py  render.py
tests/: test_compile_db.py  test_e2e_cli.py  test_scan.py
